Small update (Neglacio)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6593 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3277,10 +3277,10 @@
 	</dialog>
 	<dialog name="CIRCSettingsPage" cookie="BuBuBuEdStBuStCoBuBuStBuStBuStBuStBuStBuStBuStEdStEdStEdStEdStEdStEd" caption="Chat">
 		<control caption="Client _Options:"/>
-		<control caption="Show chat  integration"/>
+		<control caption="Show chat integration"/>
 		<control caption="Flood protection:"/>
 		<control/>
-		<control caption="Lines per second."/>
+		<control caption="lines per second"/>
 		<control caption="Show timestamp"/>
 		<control caption="Screen Font:"/>
 		<control/>
