--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -13,7 +13,7 @@
 <!-- Manifest -->
 <manifest	name="English (Default)"
 		author="Michael Stokes"
-		updatedBy="Rolandas Rudomanskis, ceceboy, ale5000"
+		updatedBy="Rolandas Rudomanskis, ryo-oh-ki, ceceboy, ale5000"
 		description="Shareaza Default English Skin File"
 		link="http://shareaza.sourceforge.net/"
 		email="contact(at)shareaza(dot)com"
@@ -45,6 +45,7 @@
 		<button id="ID_TAB_SEARCH" text="Search"/>
 		<button id="ID_TAB_TRANSFERS" text="Transfers"/>
 		<button id="ID_TAB_NETWORK" text="Network"/>
+		<button id="ID_TAB_IRC" text="Chat"/>
 	</toolbar>
 	<toolbar name="CMainWnd.Windowed">
 		<button id="ID_NETWORK_CONNECT" text="Connect"/>
@@ -57,6 +58,7 @@
 		<button id="ID_VIEW_UPLOADS"/>
 		<button id="ID_VIEW_LIBRARY"/>
 		<button id="ID_VIEW_MEDIA"/>
+		<button id="ID_TAB_IRC"/>
 		<button id="ID_VIEW_SECURITY"/>
 		<button id="ID_VIEW_HOSTS"/>
 		<button id="ID_VIEW_DISCOVERY"/>
@@ -339,6 +341,13 @@
 		<button id="ID_MEDIA_CLEAR" text="Clear"/>
 		<button id="ID_MEDIA_SAVE" text="Save"/>
 	</toolbar>
+	<!-- IRC WINDOW -->
+	<toolbar name="CMainIrcBar">
+		<button id="ID_IRC_CONNECT" text="Connect" tip="Connect to IRC"/>
+		<button id="ID_IRC_DISCONNECT" text="Disconnect" tip="Disconnect from IRC"/>
+		<rightAlign/>
+		<button id="ID_IRC_SETTINGS" text="Settings" tip="Configure IRC Settings"/>
+	</toolbar>
 	<!-- NEIGHBOURS WINDOW -->
 	<toolbar name="CNeighboursWnd.Basic">
 		<button id="ID_BROWSE_LAUNCH" text="Browse User"/>
@@ -407,15 +416,6 @@
 		<button id="ID_CHAT_CONNECT" text="Connect" visible="false"/>
 		<button id="ID_CHAT_DISCONNECT" text="Disconnect"/>
 	</toolbar>
-	<!-- IMAGE VIEWER WINDOW -->
-	<toolbar name="ImageViewer_Toolbar">
-		<button id="ImageViewer_BestFit" text="Best Fit"/>
-		<button id="ImageViewer_ActualSize" text="Actual Size"/>
-		<separator/>
-		<button id="ImageViewer_Refresh" text="Refresh"/>
-		<separator/>
-		<button id="ImageViewer_Close" text="Close"/>
-	</toolbar>
 </toolbars>
 <!-- Menu Definitions -->
 <menus>
@@ -453,6 +453,7 @@
 			<item id="ID_TAB_SEARCH" text="_Search"/>
 			<item id="ID_TAB_TRANSFERS" text="_Downloads"/>
 			<item id="ID_WINDOW_REMOTE" text="_Remote"/>
+			<item id="ID_TAB_IRC" text="_Chat"/>
 			<separator/>
 			<menu text="_Advanced">
 				<item id="ID_VIEW_NEIGHBOURS" text="_Neighbours"/>
@@ -498,6 +499,8 @@
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
 			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
 		</menu>
 	</menu>
@@ -525,6 +528,7 @@
 			<item id="ID_TAB_SEARCH" text="_Search"/>
 			<item id="ID_TAB_TRANSFERS" text="_Transfers"/>
 			<item id="ID_TAB_NETWORK" text="_Network"/>
+			<item id="ID_TAB_IRC" text="_Chat"/>
 			<separator/>
 			<item id="ID_VIEW_SECURITY" text="Se_curity"/>
 			<item id="ID_VIEW_HOSTS" text="H_ost Cache"/>
@@ -592,6 +596,8 @@
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
 		</menu>
@@ -682,6 +688,8 @@
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
 			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
 		</menu>
 	</menu>
@@ -707,6 +715,7 @@
 		<item id="ID_TAB_SEARCH" text="_Search"/>
 		<item id="ID_TAB_TRANSFERS" text="_Transfers"/>
 		<item id="ID_TAB_NETWORK" text="_Network"/>
+		<item id="ID_TAB_IRC" text="_Chat"/>
 		<separator/>
 		<item id="ID_VIEW_SECURITY" text="Se_curity"/>
 		<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
@@ -753,23 +762,6 @@
 		<item id="ID_NETWORK_AUTO_CLOSE" text="Exit After _Transfers"/>
 		<item id="ID_NETWORK_EXIT" text="E_xit"/>
 	</menu>
-	<!-- REMOTE MENU -->
-	<menu name="CRemoteWnd">
-		<item id="ID_TRAY_OPEN" text="_Open Shareaza"/>
-		<separator/>
-		<item id="ID_NETWORK_SEARCH" text="Ne_w Search..."/>
-		<item id="ID_TOOLS_DOWNLOAD" text="_Download File..."/>
-		<separator/>
-		<item id="ID_MEDIA_PLAY" text="_Play Media"/>
-		<item id="ID_MEDIA_PAUSE" text="Pa_use Media"/>
-		<item id="ID_MEDIA_STOP" text="_Stop Media"/>
-		<separator/>
-		<item id="ID_MEDIA_PREVIOUS" text="P_revious Track"/>
-		<item id="ID_MEDIA_NEXT" text="_Next Track"/>
-		<separator/>
-		<item id="ID_NETWORK_AUTO_CLOSE" text="Exit After _Transfers"/>
-		<item id="ID_NETWORK_EXIT" text="E_xit"/>
-	</menu>
 	<!-- HOME MENU -->
 	<menu name="CHomeWnd.Basic">
 		<item id="ID_TAB_HOME" text="_Home"/>
@@ -792,6 +784,7 @@
 		<item id="ID_TAB_SEARCH" text="_Search"/>
 		<item id="ID_TAB_TRANSFERS" text="_Transfers"/>
 		<item id="ID_TAB_NETWORK" text="_Network"/>
+		<item id="ID_TAB_IRC" text="_Chat"/>
 		<separator/>
 		<item id="ID_VIEW_SECURITY" text="Se_curity"/>
 		<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
@@ -1186,6 +1179,8 @@
 		<separator/>
 		<item id="ID_LIBRARY_COLUMNS" text="Choose _Columns..."/>
 		<separator/>
+		<item id="ID_SHELL_MENU" text="S_hell menu"/>
+		<separator/>
 		<item id="ID_LIBRARY_PROPERTIES" text="_Properties"/>
 	</menu>
 	<menu name="CLibraryFileView.Virtual.Basic">
@@ -1482,21 +1477,40 @@
 		<item id="ID_CHAT_TIMESTAMP" text="_Timestamp"/>
 		<item id="ID_CHAT_CLEAR" text="C_lear Window"/>
 	</menu>
-	<!-- PLUGIN MENUS -->
-	<menu name="ImageViewer_Context">
-		<item id="ImageViewer_BestFit" text="_Best Fit"/>
-		<item id="ImageViewer_ActualSize" text="_Actual Size"/>
+	<!-- IRC WINDOW -->
+	<menu name="CIRCTabRClick">
+		<item id="ID_IRC_CLOSETAB" text="_Close"/>
+	</menu>
+	<menu name="CIRCUserList">
+		<item id="ID_IRC_WHOIS" text="_Whois"/>
+		<item id="ID_IRC_QUERY" text="_Query"/>
 		<separator/>
-		<item id="ImageViewer_Refresh" text="_Refresh"/>
+		<menu text="Actions">
+			<item id="ID_IRC_TIME" text="_Time"/>
+			<item id="ID_IRC_VERSION" text="_Version"/>
+		</menu>
 		<separator/>
-		<item id="ImageViewer_Close" text="_Close"/>
+		<menu text="Control">
+			<item id="ID_IRC_IGNORE" text="_Ignore"/>
+			<item id="ID_IRC_UNIGNORE" text="_Unignore"/>
+			<item id="ID_IRC_OP" text="_Op"/>
+			<item id="ID_IRC_DEOP" text="_Deop"/>
+			<item id="ID_IRC_VOICE" text="_Voice"/>
+			<item id="ID_IRC_DEVOICE" text="D_evoice"/>
+			<item id="ID_IRC_KICK" text="_Kick"/>
+			<item id="ID_IRC_KICKWHY" text="Kick (why?)"/>
+			<item id="ID_IRC_BAN" text="_Ban"/>
+			<item id="ID_IRC_UNBAN" text="_Unban"/>
+			<item id="ID_IRC_BANKICK" text="Kick+Ban"/>
+			<item id="ID_IRC_BANKICKWHY" text="Kick+Ban (why?)"/>
+		</menu>
 	</menu>
 </menus>
 
 <!-- Watermarks -->
 <watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
+	<watermark target="CHomeViewCtrl.Header1" path="257.PNG"/>
+	<watermark target="CHomeViewCtrl.Header2" path="258.PNG"/>
 </watermarks>
 <!-- Documents -->
 <documents>
